--- a/icmake/doc/manpage/build
+++ b/icmake/doc/manpage/build
@@ -26,7 +26,7 @@ void main(int argc, list argv)
 
     rmrelease();
 
-    while (sizeof(line = fgets(versionFile, (int)line[1])))
+    while (sizeof(line = fgets(versionFile, line)))
     {
         cut = strtok(line[0], "= \t\n");
         key = cut[0];
