--- a/icmake/doc/manpage/build
+++ b/icmake/doc/manpage/build
@@ -16,21 +16,15 @@ void rmrelease()
 
 void main(int argc, list argv)
 {
-    string version;
-    string versionFile;
-    list line;
-    list cut;
-    string key;
-    string value;
-    versionFile = "../../VERSION";
-
     rmrelease();
 
+    string versionFile = "../../VERSION";
+    list line;
     while (listlen(line = fgets(versionFile, line)))
     {
-        cut = strtok(line[0], "= \t\n");
-        key = cut[0];
-        value = cut[1];
+        list cut = strtok(line[0], "= \t\n");
+        string key = cut[0];
+        string value = cut[1];
 
         if (key == "VERSION")
             fprintf("release.yo", "SUBST(_CurVers_)(", value, ")\n");
