--- a/icmake/build
+++ b/icmake/build
@@ -31,7 +31,7 @@ $0, and specify a base directory as its first command-line argument
     ./icm_prepare $action
 fi
 
-for dir in rss icm-comp icm-exec icm-pp icmun
+for dir in rss icm-comp icm-exec icm-pp icmun icmake
 do
     cd $dir
     echo $dir
